<resources>
    <string name="app_name">BMI calculator</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="first_name_hint">First Name</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="height">Height: 140</string>
    <string name="weight">Weight</string>
    <string name="submit">Submit</string>
    <string name="body_type">Body type:</string>
    <string name="sex">Sex:</string>
    <string name="results">Results</string>
    <string name="login_button">Login</string>
    <string name="signUp_button">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Enter Your Name..</string>
    <string name="headline">BMI</string>
</resources>