<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bmi_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_calculator"
        android:textSize="30sp"
        android:textColor="@color/text"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"/>

    <TableLayout
        android:id="@+id/first_name_container"
        android:layout_below="@id/bmi_title"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow android:layout_margin="@dimen/input_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/text"
                android:text="@string/first_name"/>

            <EditText
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minEms="5"
                android:inputType="text"
                android:textColorHint="@color/text"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/last_name_container"
        android:layout_below="@id/first_name_container"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow android:layout_margin="@dimen/input_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/text"
                android:text="@string/last_name"/>

            <EditText
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minEms="5"
                android:textColorHint="@color/text"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/age_container"
        android:layout_below="@id/last_name_container"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow android:layout_margin="@dimen/input_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/text"
                android:text="@string/age"/>

            <EditText
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minEms="3"
                android:textColorHint="@color/text"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/height_container"
        android:layout_below="@id/age_container"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow android:layout_margin="@dimen/input_margin">

            <TextView
                android:id="@+id/height_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/text"
                android:text="@string/height"/>

            <SeekBar
                android:id="@+id/height_slider"
                android:layout_margin="5dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/weight_container"
        android:layout_below="@id/height_container"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow android:layout_margin="@dimen/input_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/text"
                android:text="@string/weight"/>

            <EditText
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:minEms="4"
                android:textColorHint="@color/text"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/body_type_container"
        android:layout_below="@id/weight_container"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow android:layout_margin="@dimen/spinner_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/text"
                android:text="@string/body_type"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/body_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/sex_container"
        android:layout_below="@id/body_type_container"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow android:layout_margin="@dimen/spinner_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/text"
                android:text="@string/sex"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/text"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:background="@drawable/input_background"/>

</RelativeLayout>